--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project Name",
+  "name": "philip_fahim_senior_enrichment_project",
   "version": "0.0.1",
   "description": "A review time project",
   "main": "index.js",
